# workspace

./: .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/: README.md
archive/demo/src/: main.rs
layers/: layer-1-user-experience.md  layer-10-business-model.md  layer-11-developer-reference.md  layer-2-ai.md  layer-3-system-split.md  layer-4-installation-scenarios.md  layer-5-devices.md  layer-6-apps.md  layer-7-security.md  layer-8-technical-decomposition.md  layer-9-business-model.md  layer-9-hardware-requirements.md  layer-security.md  layers-review.md
log/: README.md  phase-00-playable-demo.md
plan/: README.md  phase-00-playable-demo.md  phase-01-host-shim-windows.md  phase-02-host-shim-macos.md  phase-03-host-shim-linux.md  phase-04-host-shim-android.md  phase-05-host-shim-ios.md  phase-06-host-shim-audio.md  phase-07-host-shim-storage.md  phase-08-host-shim-network.md  phase-09-display-server-core.md  phase-10-display-server-2d.md  phase-11-display-server-compositor.md  phase-12-micro-kernel-core.md  phase-13-micro-kernel-security.md  phase-14-micro-kernel-vfs.md  phase-15-command-bar.md  phase-16-command-bar-ui.md  phase-17-project-manager.md  phase-18-crdt-engine.md  phase-18-window-manager.md  phase-19-crdt-engine.md  phase-20-backup-engine.md  phase-20-p2p-mesh.md  phase-21-backup-engine.md  phase-22-app-registry.md  phase-23-island-mode.md  phase-23-v8-isolate-runtime.md  phase-24-island-mode.md  phase-24-messenger.md  phase-25-email-voip.md  phase-25-messenger.md  phase-26-email.md  phase-27-voip.md  phase-28-security-core.md  phase-28-voice-pipeline.md  phase-29-intent-api.md  phase-30-security-core.md  phase-31-admin-ui.md  phase-32-game-mode-energy.md  (+6 more)
plan-backup2/: README.md  phase-01-host-shim-windows.md  phase-04-host-shim-android.md  phase-05-host-shim-ios.md  phase-09-display-server-core.md  phase-13-micro-kernel-security.md  phase-15-command-bar.md  phase-16-project-manager.md  phase-17-window-manager.md  phase-19-p2p-mesh.md  phase-21-app-registry.md  phase-22-v8-isolate-runtime.md  phase-26-voice-pipeline.md  phase-27-intent-api.md  phase-29-admin-system-polish.md
src/: Cargo.toml
src/demo/: Cargo.toml
src/demo/src/: app.rs  input.rs  logging.rs  main.rs
src/demo/src/assets/: shape.wgsl  text.wgsl
src/demo/src/graphics/: mod.rs  shape.rs  text.rs
src/demo/src/graphics/text/: atlas.rs  mod.rs  renderer.rs
src/display_server/: Cargo.toml
src/display_server/src/: renderer.rs
src/display_server/tests/: wgpu_integration.rs
src/fuzzy_search/: Cargo.toml
src/fuzzy_search/src/: lib.rs
src/host_shim/: Cargo.toml
src/host_shim/src/: events.rs  host_event.rs  lib.rs  logging.rs  main.rs  window.rs
src/host_shim/src/audio/: config.rs  device.rs  mod.rs  ring_buffer.rs  stream.rs
src/host_shim/src/platform/: android.rs  ios.rs  linux.rs  macos.rs  mock.rs  mod.rs  windows.rs  winit_impl.rs
src/host_shim/tests/: winit_integration.rs
src/island_mode/: Cargo.toml
src/micro_kernel/: Cargo.toml
src/micro_kernel/src/: security.rs  sqlite.rs
src/micro_kernel/tests/: thread_ipc.rs
src/tests/: Cargo.toml
src/tests/tests/: integration_tests.rs
tests/: README.md  phase-01-host-shim-windows.md  phase-02-host-shim-macos.md  phase-03-host-shim-linux.md  phase-04-host-shim-android.md  phase-05-host-shim-ios.md  phase-06-host-shim-audio.md  phase-07-host-shim-storage.md  phase-08-host-shim-network.md  phase-09-display-server-core.md  phase-10-display-server-2d-text.md  phase-11-display-server-compositor.md  phase-12-micro-kernel-core-ipc.md  phase-13-micro-kernel-security.md  phase-14-micro-kernel-vfs.md  phase-15-command-bar-engine.md  phase-16-command-bar-ui.md  phase-17-project-manager.md  phase-18-window-manager.md  phase-19-crdt-engine.md  phase-20-p2p-mesh.md  phase-21-backup-engine.md  phase-22-app-registry.md  phase-23-v8-isolate-runtime.md  phase-24-island-mode.md  phase-25-messenger.md  phase-26-email.md  phase-27-voip.md  phase-28-voice-pipeline.md  phase-29-intent-api-ai-core.md  phase-30-security-core.md  phase-31-admin-ui.md  phase-32-game-mode-energy.md  phase-33-accessibility-themes.md  phase-34-performance.md  phase-35-stress-tests.md  phase-36-ci-cd.md  phase-37-documentation.md
tests/runners/workspace-test-runner/: Cargo.toml
tests/runners/workspace-test-runner/src/: main.rs
