[workspace]
members = [
    "host_shim",
    "display_server",
    "micro_kernel",
    "island_mode",
    "fuzzy_search",
    "tests",
    "demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["CORE OS Team <team@coreos.org>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/coreos/coreos"
homepage = "https://coreos.org"
rust-version = "1.78"

[workspace.dependencies]
# Host abstraction
winit = "0.30"
# GPU rendering
wgpu = "22"
# Audio
cpal = "0.15"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
