[package]
name = "w-display-server"
description = "WebGPU-based display server and compositor"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wgpu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pollster = "0.3"

[lib]
name = "w_display_server"
path = "src/lib.rs"
