[package]
name = "w-fuzzy-search"
description = "Fuzzy search engine with Levenshtein distance and n-gram scoring"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
proptest = "1"
