[package]
name = "w-micro-kernel"
description = "Core runtime: IPC, security, VFS, and CRDT engine bindings"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
proptest = "1"

[lib]
name = "w_micro_kernel"
path = "src/lib.rs"
