[package]
name = "integration_tests"
description = "Cross-crate integration test suite for CORE OS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
w-host-shim = { path = "../host_shim" }
w-display-server = { path = "../display_server" }
w-micro-kernel = { path = "../micro_kernel" }
w-island-mode = { path = "../island_mode" }
serde_json = "1"
